# llmux

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  Makefile  README.md  TODO.md  docker-compose.yml  scaling-theory.md
.github/workflows/: ci.yml
api/: Dockerfile  main.py  pyproject.toml  settings.py
api/tests/: test_api.py  test_settings.py
config/: models.json
dashboard/: .dockerignore  Dockerfile  components.json  eslint.config.js  package.json  pnpm-lock.yaml
dashboard/src/: App.tsx  index.css
dashboard/src/components/: ActivityFeed.tsx  BenchmarkPanel.tsx  ChatPanel.tsx  LoadTester.tsx  MessageSender.tsx  MetricsPanel.tsx  ModelGroup.tsx  ModelSelect.tsx  ReplicaCard.tsx  RunCard.tsx  Sparkline.tsx  StatsBar.tsx  WorkerStatus.tsx
dashboard/src/lib/: api.ts  benchmark.ts  config.ts  events.ts  metrics.ts  mock.ts  types.ts
diagrams/: 02-worker.excalidraw  05-autoscaling.excalidraw
docs/diagrams/: 01-system-abstract.excalidraw  03-llm-pod.excalidraw  04-redis-backbone.excalidraw  06-capacity-128gb.excalidraw
infra/helm/llm-server/: README.md  (+2 more)
infra/k8s/: api.yaml  config.yaml  dashboard.yaml  keda.yaml  kind-config.yaml  llm-135m.yaml  llm-360m.yaml  namespace.yaml  proxy.yaml  redis.yaml  worker.yaml
infra/scripts/: deploy-k8s.sh  generate-compose.py  stop-k8s.sh
worker/: Dockerfile  bench_worker.py  benchmark.py  main.py  pyproject.toml  settings.py  slots_sidecar.py  telemetry.py
worker/runners/: __init__.py  base.py  ollama.py  openai.py
worker/tests/: test_runners.py  test_settings.py  test_telemetry.py  test_worker.py
(+14 files in other folders)
